# bam-engine

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  validation-calibration-report.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmarks.yml  comparison.yml  draft-pdf.yml  growth-plus-stability.yml  publish.yml  repo-review.yml  test.yml  validation-status.yml  validation.yml
_tests/: manual_bankruptcy.py  manual_goods_market.py  manual_labor_market.py  manual_planning.py  manual_production.py  manual_revenue.py
asv_benchmarks/: README.rst  __init__.py  asv.conf.json  simulation.py
benchmarks/: README.md  README.rst  bench_derived_arrays.py  bench_full_simulation.py  bench_seed_stability.py  profile_simulation.py  run_stability.py
benchmarks/micro/: bench_events.py
benchmarks/results/: README.md  (+62 more)
calibration/: README.md  __init__.py  __main__.py  analysis.py  bayesian_opt.py  calibration_results_sensitivity.json  checkpoint.py  cli.py  config.py  consistency.py  grid.py  grid_search.py  io.py  local_sweep.py  morris.py  optimizer.py  parameter_space.py  progress.py  reporting.py  run_grid_search.py  run_growth_plus_calibration.py  run_growth_plus_phase4.py  run_stability.py  runner.py  scoring.py  screening.py  sensitivity.py  stability.py  visualization.py
comparison/: README.md  __init__.py
diagnostics/: DIAGNOSTICS_ANALYSIS.md  baseline_diagnostics.py  credit_market_investigation.py  growth_plus_diagnostics.py  labor_market_investigation.py  test_beta_sweep.py  test_price_cut.py
docs/: CALIBRATION.md  ECS_ROADMAP.md  NOTES.md  PROMPTS.md  PROMPT_MASTER.md  README.md  ROADMAP.md  SCHEDULER.md  USAGE.md  about.rst  calibration.rst  changelog.rst  conf.py  development.rst  glossary.rst  index.rst  installation.rst  performance.rst  quickstart.rst  related_projects.rst  release_history.rst  roadmap.rst  sg_execution_times.rst
example/: config-gpt.yml  config.yml  data_collector.py  diagnostics.py  plotting.py  run.py  scratch.py  scratch_credit_market.py  scratch_labor_market.py
examples/: GALLERY_HEADER.rst  README.md  README.rst  decorator_usage.py
extensions/: __init__.py
paper/: paper.bib  paper.md
scratches/: scratch_bankruptcy.py  scratch_credit_market.py  scratch_production.py  scratch_revenue.py
src/: diagnostics.py  results.py
tests/: .uncovered.md  __init__.py  conftest.py
validation/: README.md  __init__.py  core.py  engine.py  metrics.py  reporting.py  runners.py  scoring.py  types.py
(+969 files in other folders)
