[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bamengine"
version = "0.0.0"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=24.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.3",
    "numpy>=1.26",
    "numba<0.61",
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.black]
line-length = 88