# pyproject.toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bamengine"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "numba<=0.62.1",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.131.9",
    "matplotlib>=3.10.3",
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "NPY"]
extend-select = ["E501"]  # Enforce line-length violations
ignore = []

[tool.ruff.lint.pycodestyle]
max-doc-length = 120  # Allow longer lines in docstrings (120 chars)
max-line-length = 88  # But keep code at 88

[tool.mypy]
python_version = "3.12"
strict = true

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
# Coverage disabled during ECS migration - re-enable after completion
# addopts = """
# --cov=bamengine
# --cov-report=term-missing
# --cov-fail-under=95
# """

[tool.coverage.run]
omit = [
    "*/main.py",
    "*/_testing/*",
    "*/_logging_ext*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "log\\.",
    "ValueError"
]
